# modular-agent-harness

./: .gitignore  .swp  design.md  pyproject.toml
configs/: baseline.yaml  hierarchical_compression.yaml  hybrid_memory.yaml  multi_agent.yaml  rag_memory.yaml  rolling_summary.yaml  scratchpad_memory.yaml
docker/: Dockerfile  build.sh
docs/: writeup.md
experiments/: run_ablation.py
scripts/: smoke_sandbox.py
src/: llm_client.py  logger.py  orchestrator.py  runner.py  sandbox.py  tool_executor.py
src/communication/: __init__.py  base.py  blackboard.py  orchestrated.py  single_agent.py
src/compression/: __init__.py  base.py  hierarchical.py  none.py  rolling_summary.py
src/evaluation/: analysis.py  scorer.py  swebench_loader.py
src/memory/: __init__.py  base.py  hybrid.py  naive.py  rag.py  scratchpad.py
src/prompts/: single_agent.txt
tests/: conftest.py  test_communication.py  test_compression.py  test_end_to_end.py  test_llm_client.py  test_memory.py  test_orchestrator.py  test_runner.py  test_swebench_loader.py  test_tool_executor.py
